--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div
             id="root"
-            class="h-screen w-full flex justify-center items-center"
+            class="h-screen w-full flex"
         ></div>
         <script>
             global = this;
